Implemented Compiler